﻿1.0.3
- can now link storage controllers CTRL+LEFT Click with linker on a storage controller
- you can break a storage controller and have it maintain its link
- new parts: storage controller upgrades!
   - you can upgrade from any lower tier direct to any upper tier with appropriate upgrade
   - eg: copper -> tinbronze, copper->cupronickel etc, iron->metoriciron, blackbronze->steel
   - you can't upgrade between the different bronzes though (so no tinbronze to blackbronze)
   - if the controller contains items it will drop them when you upgrade